--- a/plugins/FindPeaks/FindPeaks.ui
+++ b/plugins/FindPeaks/FindPeaks.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>379</width>
-    <height>399</height>
+    <width>342</width>
+    <height>336</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -52,7 +52,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,1,1,0">
+      <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0,0,0">
        <property name="leftMargin">
         <number>4</number>
        </property>
@@ -65,57 +65,21 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
+       <property name="verticalSpacing">
+        <number>2</number>
+       </property>
+       <item row="2" column="1">
+        <widget class="QToolButton" name="direction">
          <property name="text">
-          <string>Scale</string>
+          <string>...</string>
          </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         <property name="icon">
+          <iconset resource="../../resources/icons/icons.qrc">
+           <normaloff>:/icons/lineoutH.png</normaloff>
+           <normalon>:/icons/lineoutV.png</normalon>:/icons/lineoutH.png</iconset>
          </property>
-        </widget>
-       </item>
-       <item row="0" column="2">
-        <widget class="QLineEdit" name="originOffset">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>0</string>
-         </property>
-         <property name="neutrinoSave" stdset="0">
+         <property name="checkable">
           <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QPushButton" name="setOrigin">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Set</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="scaleOffset">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>1</string>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -128,6 +92,46 @@
           <font>
            <pointsize>10</pointsize>
           </font>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="3">
+        <widget class="QDoubleSpinBox" name="param">
+         <property name="font">
+          <font>
+           <family>Lucida Sans</family>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="suffix">
+          <string> px</string>
+         </property>
+         <property name="maximum">
+          <double>1000.000000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Scale</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
@@ -146,7 +150,61 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="origin">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
+        <widget class="QPushButton" name="setOrigin">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Set</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLineEdit" name="originOffset">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>0</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="3">
+        <widget class="QLineEdit" name="scaleOffset">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>1</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="4">
         <widget class="QPushButton" name="setScale">
          <property name="font">
           <font>
@@ -158,54 +216,17 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="origin">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
+       <item row="0" column="2">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>+</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
-        <widget class="QComboBox" name="direction">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-           <strikeout>false</strikeout>
-          </font>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-         <item>
-          <property name="text">
-           <string>H</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>V</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-       <item row="2" column="2">
-        <widget class="QDoubleSpinBox" name="param">
-         <property name="font">
-          <font>
-           <family>Lucida Sans</family>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="maximum">
-          <double>1000.000000000000000</double>
-         </property>
-         <property name="value">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
+       <item row="1" column="2">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>x</string>
          </property>
         </widget>
        </item>
@@ -213,7 +234,88 @@
      </widget>
     </item>
     <item>
-     <widget class="nCustomPlotMouseX" name="plot" native="true"/>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="tab_plot">
+       <attribute name="title">
+        <string>Plot</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>4</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="nCustomPlotMouseX" name="plot" native="true"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab_points">
+       <attribute name="title">
+        <string>Points</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>4</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QTableWidget" name="points">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+          <property name="alternatingRowColors">
+           <bool>true</bool>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::ContiguousSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+          <column>
+           <property name="text">
+            <string>X</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Y</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -236,12 +338,10 @@
    <addaction name="actionLoadPref"/>
    <addaction name="actionSavePref"/>
    <addaction name="separator"/>
-   <addaction name="actionSaveClipboard"/>
-   <addaction name="actionSaveTxt"/>
-   <addaction name="actionSavePDF"/>
-   <addaction name="separator"/>
    <addaction name="actionRect"/>
    <addaction name="separator"/>
+   <addaction name="actionClipboard"/>
+   <addaction name="actionTxt"/>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="font">
@@ -274,7 +374,7 @@
     <string>Save Preferences</string>
    </property>
   </action>
-  <action name="actionSaveClipboard">
+  <action name="actionClipboard">
    <property name="icon">
     <iconset>
      <normaloff>:icons//saveClipboard.png</normaloff>:icons//saveClipboard.png</iconset>
@@ -286,7 +386,7 @@
     <string>Copy to Clipboard</string>
    </property>
   </action>
-  <action name="actionSaveTxt">
+  <action name="actionTxt">
    <property name="icon">
     <iconset>
      <normaloff>:icons//saveTxt.png</normaloff>:icons//saveTxt.png</iconset>
@@ -296,18 +396,6 @@
    </property>
    <property name="toolTip">
     <string>Export TXT</string>
-   </property>
-  </action>
-  <action name="actionSavePDF">
-   <property name="icon">
-    <iconset>
-     <normaloff>:icons//savePDF.png</normaloff>:icons//savePDF.png</iconset>
-   </property>
-   <property name="text">
-    <string>savePDF</string>
-   </property>
-   <property name="toolTip">
-    <string>Export PDF or SVG</string>
    </property>
   </action>
   <action name="actionRect">
@@ -331,6 +419,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../resources/icons/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
