--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>424</height>
+    <height>423</height>
    </rect>
   </property>
   <property name="font">
@@ -475,69 +475,53 @@
         <property name="bottomMargin">
          <number>4</number>
         </property>
-        <item row="1" column="0" colspan="2">
-         <widget class="QWidget" name="widget_4" native="true">
-          <layout class="QGridLayout" name="gridLayout_7">
-           <item row="0" column="1" rowspan="3">
-            <widget class="QListWidget" name="pluginList"/>
-           </item>
-           <item row="0" column="0">
-            <widget class="QToolButton" name="addPlugin">
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset resource="../resources/icons/icons.qrc">
-               <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <spacer name="verticalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="1" column="0">
-            <widget class="QToolButton" name="removePlugin">
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset resource="../resources/icons/icons.qrc">
-               <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="QLineEdit" name="systemPlugins">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
-         <widget class="QLabel" name="label_6">
+         <widget class="QToolButton" name="addPlugin">
+          <property name="toolTip">
+           <string>add plugin directory</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/icons/icons.qrc">
+            <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="1" column="0">
+         <widget class="QToolButton" name="removePlugin">
+          <property name="toolTip">
+           <string>remove selected plugin directory</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/icons/icons.qrc">
+            <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" rowspan="3">
+         <widget class="QListWidget" name="pluginList">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
            </font>
-          </property>
-          <property name="text">
-           <string>Default dir:</string>
           </property>
          </widget>
         </item>
