--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -38,7 +38,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -475,34 +475,31 @@
         <property name="bottomMargin">
          <number>4</number>
         </property>
+        <item row="1" column="1" rowspan="3">
+         <widget class="QListWidget" name="pluginList">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0">
-         <widget class="QToolButton" name="addPlugin">
-          <property name="toolTip">
-           <string>add plugin directory</string>
+         <widget class="QLabel" name="label_6">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
           </property>
           <property name="text">
-           <string>...</string>
+           <string>Default</string>
           </property>
-          <property name="icon">
-           <iconset resource="../resources/icons/icons.qrc">
-            <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
-         <spacer name="verticalSpacer_3">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item row="1" column="0">
          <widget class="QToolButton" name="removePlugin">
           <property name="toolTip">
            <string>remove selected plugin directory</string>
@@ -516,14 +513,39 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1" rowspan="3">
-         <widget class="QListWidget" name="pluginList">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-           </font>
+        <item row="1" column="0">
+         <widget class="QToolButton" name="addPlugin">
+          <property name="toolTip">
+           <string>add plugin directory</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../resources/icons/icons.qrc">
+            <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
           </property>
          </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="defaultPluginDir">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </widget>
