--- a/UIs/nObject.ui
+++ b/UIs/nObject.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>368</width>
-    <height>278</height>
+    <height>279</height>
    </rect>
   </property>
   <property name="font">
@@ -27,12 +27,21 @@
      <pointsize>10</pointsize>
     </font>
    </property>
-   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0" columnstretch="0,0,0,0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0" columnstretch="0,0,0,0">
+    <property name="leftMargin">
+     <number>6</number>
+    </property>
+    <property name="topMargin">
+     <number>6</number>
+    </property>
+    <property name="rightMargin">
+     <number>6</number>
+    </property>
+    <property name="bottomMargin">
+     <number>6</number>
+    </property>
     <property name="verticalSpacing">
      <number>3</number>
-    </property>
-    <property name="margin">
-     <number>6</number>
     </property>
     <item row="5" column="0">
      <widget class="QLabel" name="label_6">
@@ -194,6 +203,11 @@
     </item>
     <item row="3" column="0" colspan="4">
      <widget class="QTableWidget" name="tableWidget">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="toolTip">
        <string>These are the coordinates of the Rectangle top-Left and bottom-Right corners</string>
       </property>
@@ -298,7 +312,16 @@
     <item row="6" column="0" colspan="4">
      <widget class="QWidget" name="widget" native="true">
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
-       <property name="margin">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
